tests/fixtures/cargo_build/conflicting_evidence.txt
Compiling demo v0.1.0 (/tmp/demo)
error[E0308]: mismatched types
 --> src/main.rs:4:20
  |
5 |     let count: u32 = "seven";
  |                      ^^^^^^^ expected `u32`, found `&str`
  |
help: try parsing the string into a number
For more information about this error, try `rustc --explain E0425`.

error: could not compile `demo` (bin "demo") due to 1 previous error
